--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,38 +1,40 @@
 <div class="container-fluid" data-bind="validationOptions: {messageTemplate: 'myCustomTemplate'}">
-    <form name="login" class="center" data-bind="submit: submit">
-        <core-field>
-            <paper-input-decorator floatinglabel label="Login">
-                <input type="text" name="login" data-bind="value: login"/>
-            </paper-input-decorator>
-        </core-field>
-        <p class="errorMessage" data-bind="if: !login.isValid() && login.isModified()">
-            <span data-bind="validationMessage: login"> </span>
-            <svg viewBox="0 0 24 24" height="20px" width="20px">
-                <g>
-                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
-                </g>
-            </svg>
-        </p>
-        <core-field>
-            <paper-input-decorator floatinglabel label="Password">
-                <input type="password" name="password" data-bind="value: password"/>
-            </paper-input-decorator>
-        </core-field>
-        <p class="errorMessage" data-bind="if: !password.isValid() && password.isModified()">
-            <span data-bind="validationMessage: password"> </span>
-            <svg viewBox="0 0 24 24" height="20px" width="20px">
-                <g>
-                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
-                </g>
-            </svg>
-        </p>
-        <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Log In
-        </paper-button>
-            <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="5000" responsivewidth="600px"></paper-toast>
-            <paper-toast text="Loading.." id="spinner" duration="9999" swipeDisabled="true" autoCloseDisabled="true" responsivewidth="600px">
-                <paper-spinner active ></paper-spinner>
-            </paper-toast>
-        <div class="text-center"> or <a href="#registration">Create account</a></div>
-    </form>
+    <fieldset data-bind="attr: {disabled: formLoading}">
+        <form name="login" class="center" data-bind="submit: submit">
+            <core-field>
+                <paper-input-decorator floatinglabel label="Login">
+                    <input type="text" name="login" data-bind="value: login"/>
+                </paper-input-decorator>
+            </core-field>
+            <p class="errorMessage" data-bind="if: !login.isValid() && login.isModified()">
+                <span data-bind="validationMessage: login"> </span>
+                <svg viewBox="0 0 24 24" height="20px" width="20px">
+                    <g>
+                        <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                    </g>
+                </svg>
+            </p>
+            <core-field>
+                <paper-input-decorator floatinglabel label="Password">
+                    <input type="password" name="password" data-bind="value: password"/>
+                </paper-input-decorator>
+            </core-field>
+            <p class="errorMessage" data-bind="if: !password.isValid() && password.isModified()">
+                <span data-bind="validationMessage: password"> </span>
+                <svg viewBox="0 0 24 24" height="20px" width="20px">
+                    <g>
+                        <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                    </g>
+                </svg>
+            </p>
+            <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Log In
+            </paper-button>
+                <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="5000" responsivewidth="600px"></paper-toast>
+                <paper-toast text="Loading.." id="spinner" duration="9999" swipeDisabled="true" autoCloseDisabled="true" responsivewidth="600px">
+                    <paper-spinner active ></paper-spinner>
+                </paper-toast>
+            <div class="text-center"> or <a href="#registration">Create account</a></div>
+        </form>
+    </fieldset>
 </div>
 
